[package]
name = "flat-tree"
version = "6.0.0-beta.0"
description = "Series of functions to map a binary tree to a list"
authors = ["Mathias Buus <mathiasbuus@gmail.com>", "Timo Tiuraniemi <timo.tiuraniemi@iki.fi>"]
repository = "https://github.com/datrs/flat-tree"
keywords = ["flat", "tree", "binary"]
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"

[lib]
bench = false

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false
